Change header to be little bigger than the logo. Also fix the Zuruck button to be visible.

--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,8 @@
    }
 
    #customer_logo {
-     margin-left: 10px;
+     margin-left: -2px;
+     margin-top: -5px;
      cursor: pointer;
    }
 
@@ -132,7 +133,7 @@
     padding-left: 23px;
     padding-right: 23px;
     margin-bottom: 30px;
-    background-color: #F2F2F2;
+    background-color: #f2f2f2;
 
     -webkit-box-shadow: 0px 3px 2px 0px rgba(204,204,204,1);
     -moz-box-shadow: 0px 3px 2px 0px rgba(204,204,204,1);
@@ -369,7 +370,7 @@
     }
 
     #immo_data {
-      margin-top: 200px;
+      margin-top: 120px;
     }
 
   }
